修复Windows构建中cmake命令找不到的问题，使用完整路径

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,8 +85,8 @@ jobs:
         run: |
           mkdir -p build
           cd build
-          cmake .. -G "Unix Makefiles"
-          make
+          /ucrt64/bin/cmake .. -G "Unix Makefiles"
+          /ucrt64/bin/make
       - name: Package build artifacts
         shell: msys2 {0}
         run: |
