--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: C/C++ CI
 on:
   push:
     branches: [main]
+    tags: [v*]
   pull_request:
     branches: [main]
   release:
@@ -102,7 +103,7 @@ jobs:
   release:
     needs: [build-linux, build-macos]
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'created'
+    if: (github.event_name == 'release' && github.event.action == 'created') || github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
