--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,45 @@
+# 发布工作流
+# 此工作流负责：
+# 1. 下载Build工作流生成的所有平台构建产物
+# 2. 打包仓库源码
+# 3. 将构建产物和源码包上传到GitHub Release
+
 name: Release
 
 on:
+  # 当Build工作流成功完成后触发（自动模式）
   workflow_run:
     workflows: ["Build"]
     types:
       - completed
     branches: [main]
+  # 当推送以v开头的标签时触发（手动标签模式）
   push:
     tags: [v*]
+  # 当创建GitHub Release时触发（手动Release模式）
   release:
     types: [created]
 
 jobs:
+  # 发布作业
   release:
     runs-on: ubuntu-latest
+    # 只有在以下情况下才执行：
+    # 1. Build工作流成功完成
+    # 2. 创建了GitHub Release
+    # 3. 推送了以v开头的标签
     if: |
       (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
       (github.event_name == 'release' && github.event.action == 'created') ||
       (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/'))
     steps:
+      # 检出代码（用于创建源码包）
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # 获取完整的git历史
 
+      # 当从workflow_run触发时，下载Build工作流的所有构建产物
       - name: Download all artifacts from Build workflow
         if: github.event_name == 'workflow_run'
         uses: dawidd6/action-download-artifact@v2
@@ -32,29 +48,33 @@ jobs:
           workflow_conclusion: success
           path: artifacts
 
+      # 当直接触发时（如推送标签或创建Release），直接下载当前workflow的artifacts
       - name: Download all artifacts (direct)
         if: github.event_name != 'workflow_run'
         uses: actions/download-artifact@v4
         with:
           path: artifacts
 
-      - name: Package repository
+      # 打包仓库源码为tar.gz文件
+      - name: Package repository source code
         run: |
-          # 创建仓库压缩包
+          # 创建仓库压缩包，文件名包含标签/分支名
           git archive --format=tar.gz --output=snake-source-${GITHUB_REF_NAME}.tar.gz HEAD
           # 确保artifacts目录存在
           mkdir -p artifacts
           # 将源码压缩包移动到artifacts目录
           mv snake-source-${GITHUB_REF_NAME}.tar.gz artifacts/
 
-      - name: List artifacts
+      # 列出所有artifacts，用于调试
+      - name: List all artifacts
         run: ls -la artifacts/*
 
+      # 上传所有artifacts到GitHub Release
       - name: Upload release assets
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            artifacts/**/*.zip
-            artifacts/**/*.tar.gz
+            artifacts/**/*.zip  # 所有平台的二进制构建产物
+            artifacts/**/*.tar.gz  # 源码包
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub自动提供的令牌
