--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,14 @@ jobs:
         # 定义支持的操作系统和架构
         os: [ubuntu-latest, macos-latest, windows-latest]
         arch: [x86_64]
-        # 为macOS额外添加arm64架构支持
-        include:
-          - os: macos-latest
-            arch: arm64
         # 根据操作系统设置编译器和构建工具
         compiler: [gcc]
+        # 额外的矩阵配置
         include:
+          # 为macOS添加arm64架构支持
+          - os: macos-latest
+            arch: arm64
+          # Windows平台的编译器配置
           - os: windows-latest
             compiler: gcc
 
@@ -41,7 +42,7 @@ jobs:
       - name: Set up CMake
         uses: jwlawson/actions-setup-cmake@v2
         with:
-          cmake-version: 'latest'
+          cmake-version: "latest"
 
       # 安装依赖
       - name: Install dependencies (Linux)
